// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <injectIntl(NavigationSideMenu)
    menuItems={
      Array [
        Object {
          "childKeys": Array [
            "test1",
            "test2",
            "test3",
            "test4",
          ],
          "key": "menu",
          "text": "Test Menu",
        },
        Object {
          "key": "test1",
          "text": "Test Menu 1",
        },
        Object {
          "key": "test2",
          "text": "Test Menu 2",
        },
        Object {
          "key": "test3",
          "text": "Test Menu 3",
        },
        Object {
          "key": "test4",
          "text": "Test Menu 4",
        },
      ]
    }
    onChange={[Function]}
    routingStackBack={[Function]}
    selectedMenuKey="menu"
  >
    <NavigationSideMenu
      intl={
        Object {
          "$t": [Function],
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "defaultRichTextElements": undefined,
          "fallbackOnEmptyString": true,
          "formatDate": [Function],
          "formatDateTimeRange": [Function],
          "formatDateToParts": [Function],
          "formatDisplayName": [Function],
          "formatList": [Function],
          "formatListToParts": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatNumberToParts": [Function],
          "formatPlural": [Function],
          "formatRelativeTime": [Function],
          "formatTime": [Function],
          "formatTimeToParts": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getDisplayNames": [Function],
            "getListFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralRules": [Function],
            "getRelativeTimeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "onError": [Function],
          "onWarn": [Function],
          "textComponent": Symbol(react.fragment),
          "timeZone": undefined,
          "wrapRichTextChunksInFragment": undefined,
        }
      }
      menuItems={
        Array [
          Object {
            "childKeys": Array [
              "test1",
              "test2",
              "test3",
              "test4",
            ],
            "key": "menu",
            "text": "Test Menu",
          },
          Object {
            "key": "test1",
            "text": "Test Menu 1",
          },
          Object {
            "key": "test2",
            "text": "Test Menu 2",
          },
          Object {
            "key": "test3",
            "text": "Test Menu 3",
          },
          Object {
            "key": "test4",
            "text": "Test Menu 4",
          },
        ]
      }
      onChange={[Function]}
      routingStackBack={[Function]}
      selectedMenuKey="menu"
    >
      <VisuallyHiddenText
        aria-atomic="true"
        aria-live="assertive"
        aria-relevant="additions text"
        refCallback={[Function]}
      >
        <span
          aria-atomic="true"
          aria-live="assertive"
          aria-relevant="additions text"
          className="visually-hidden-text"
        />
      </VisuallyHiddenText>
      <ContentContainer
        className="side-menu-content-container orion-fusion-theme"
        fill={true}
        header={
          <React.Fragment>
            <injectIntl(ActionHeader)
              className="side-menu-action-header"
              data-navigation-side-menu-action-header={true}
              onBack={[Function]}
              title="Test Menu"
            />
          </React.Fragment>
        }
        intl={
          Object {
            "$t": [Function],
            "defaultFormats": Object {},
            "defaultLocale": "en",
            "defaultRichTextElements": undefined,
            "fallbackOnEmptyString": true,
            "formatDate": [Function],
            "formatDateTimeRange": [Function],
            "formatDateToParts": [Function],
            "formatDisplayName": [Function],
            "formatList": [Function],
            "formatListToParts": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatNumberToParts": [Function],
            "formatPlural": [Function],
            "formatRelativeTime": [Function],
            "formatTime": [Function],
            "formatTimeToParts": [Function],
            "formats": Object {},
            "formatters": Object {
              "getDateTimeFormat": [Function],
              "getDisplayNames": [Function],
              "getListFormat": [Function],
              "getMessageFormat": [Function],
              "getNumberFormat": [Function],
              "getPluralRules": [Function],
              "getRelativeTimeFormat": [Function],
            },
            "locale": "en",
            "messages": null,
            "onError": [Function],
            "onWarn": [Function],
            "textComponent": Symbol(react.fragment),
            "timeZone": undefined,
            "wrapRichTextChunksInFragment": undefined,
          }
        }
      >
        <div
          className="content-container-fill side-menu-content-container orion-fusion-theme"
          intl={
            Object {
              "$t": [Function],
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "defaultRichTextElements": undefined,
              "fallbackOnEmptyString": true,
              "formatDate": [Function],
              "formatDateTimeRange": [Function],
              "formatDateToParts": [Function],
              "formatDisplayName": [Function],
              "formatList": [Function],
              "formatListToParts": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatNumberToParts": [Function],
              "formatPlural": [Function],
              "formatRelativeTime": [Function],
              "formatTime": [Function],
              "formatTimeToParts": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getDisplayNames": [Function],
                "getListFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralRules": [Function],
                "getRelativeTimeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "onError": [Function],
              "onWarn": [Function],
              "textComponent": Symbol(react.fragment),
              "timeZone": undefined,
              "wrapRichTextChunksInFragment": undefined,
            }
          }
        >
          <div
            className="header"
          >
            <injectIntl(ActionHeader)
              className="side-menu-action-header"
              data-navigation-side-menu-action-header={true}
              onBack={[Function]}
              title="Test Menu"
            >
              <ActionHeader
                className="side-menu-action-header"
                data-navigation-side-menu-action-header={true}
                intl={
                  Object {
                    "$t": [Function],
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "defaultRichTextElements": undefined,
                    "fallbackOnEmptyString": true,
                    "formatDate": [Function],
                    "formatDateTimeRange": [Function],
                    "formatDateToParts": [Function],
                    "formatDisplayName": [Function],
                    "formatList": [Function],
                    "formatListToParts": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatNumberToParts": [Function],
                    "formatPlural": [Function],
                    "formatRelativeTime": [Function],
                    "formatTime": [Function],
                    "formatTimeToParts": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getDisplayNames": [Function],
                      "getListFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralRules": [Function],
                      "getRelativeTimeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "onError": [Function],
                    "onWarn": [Function],
                    "textComponent": Symbol(react.fragment),
                    "timeZone": undefined,
                    "wrapRichTextChunksInFragment": undefined,
                  }
                }
                level={1}
                onBack={[Function]}
                title="Test Menu"
              >
                <ActionHeaderContainer
                  className="side-menu-action-header"
                  data-navigation-side-menu-action-header={true}
                  endContent={null}
                  level={1}
                  startContent={
                    <div
                      className="left-buttons orion-fusion-theme"
                    >
                      <Button
                        className="header-button back-button"
                        data-terra-action-header="back-button"
                        icon={
                          <span
                            className="header-icon back"
                          />
                        }
                        isBlock={false}
                        isCompact={false}
                        isDisabled={false}
                        isIconOnly={true}
                        isReversed={false}
                        onClick={[Function]}
                        text="Terra.actionHeader.back"
                        type="button"
                        variant="utility"
                      />
                    </div>
                  }
                  title="Test Menu"
                >
                  <div
                    className="flex-header orion-fusion-theme side-menu-action-header"
                    data-navigation-side-menu-action-header={true}
                  >
                    <div
                      className="flex-end"
                    >
                      <div
                        className="left-buttons orion-fusion-theme"
                      >
                        <Button
                          className="header-button back-button"
                          data-terra-action-header="back-button"
                          icon={
                            <span
                              className="header-icon back"
                            />
                          }
                          isBlock={false}
                          isCompact={false}
                          isDisabled={false}
                          isIconOnly={true}
                          isReversed={false}
                          onClick={[Function]}
                          text="Terra.actionHeader.back"
                          type="button"
                          variant="utility"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="Terra.actionHeader.back"
                            className="button utility orion-fusion-theme header-button back-button"
                            data-terra-action-header="back-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            title="Terra.actionHeader.back"
                            type="button"
                          >
                            <span
                              className="button-label icon-only"
                            >
                              <span
                                className="icon"
                              >
                                <span
                                  className="header-icon back icon-svg"
                                />
                              </span>
                            </span>
                          </button>
                        </Button>
                      </div>
                    </div>
                    <div
                      className="flex-fill"
                    >
                      <div
                        className="title-container"
                      >
                        <h1
                          className="title"
                        >
                          Test Menu
                        </h1>
                      </div>
                    </div>
                  </div>
                </ActionHeaderContainer>
              </ActionHeader>
            </injectIntl(ActionHeader)>
          </div>
          <div
            className="main"
          >
            <Scroll
              className="normalizer"
            >
              <div
                className="scroll normalizer"
              >
                <nav
                  role="navigation"
                >
                  <ul
                    className="side-menu-list"
                    role="menu"
                  >
                    <injectIntl(MenuItem)
                      data-menu-item="test1"
                      isSelected={false}
                      key="test1"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      text="Test Menu 1"
                    >
                      <MenuItem
                        data-menu-item="test1"
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": null,
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": Symbol(react.fragment),
                            "timeZone": undefined,
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                        isSelected={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        text="Test Menu 1"
                      >
                        <li
                          className="list-item"
                          role="none"
                        >
                          <div
                            className="menu-item orion-fusion-theme"
                            data-menu-item="test1"
                            onBlur={[Function]}
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            role="menuitem"
                            tabIndex="0"
                          >
                            <div
                              className="title"
                            >
                              Test Menu 1
                            </div>
                          </div>
                        </li>
                      </MenuItem>
                    </injectIntl(MenuItem)>
                    <injectIntl(MenuItem)
                      data-menu-item="test2"
                      isSelected={false}
                      key="test2"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      text="Test Menu 2"
                    >
                      <MenuItem
                        data-menu-item="test2"
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": null,
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": Symbol(react.fragment),
                            "timeZone": undefined,
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                        isSelected={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        text="Test Menu 2"
                      >
                        <li
                          className="list-item"
                          role="none"
                        >
                          <div
                            className="menu-item orion-fusion-theme"
                            data-menu-item="test2"
                            onBlur={[Function]}
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            role="menuitem"
                            tabIndex="0"
                          >
                            <div
                              className="title"
                            >
                              Test Menu 2
                            </div>
                          </div>
                        </li>
                      </MenuItem>
                    </injectIntl(MenuItem)>
                    <injectIntl(MenuItem)
                      data-menu-item="test3"
                      isSelected={false}
                      key="test3"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      text="Test Menu 3"
                    >
                      <MenuItem
                        data-menu-item="test3"
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": null,
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": Symbol(react.fragment),
                            "timeZone": undefined,
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                        isSelected={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        text="Test Menu 3"
                      >
                        <li
                          className="list-item"
                          role="none"
                        >
                          <div
                            className="menu-item orion-fusion-theme"
                            data-menu-item="test3"
                            onBlur={[Function]}
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            role="menuitem"
                            tabIndex="0"
                          >
                            <div
                              className="title"
                            >
                              Test Menu 3
                            </div>
                          </div>
                        </li>
                      </MenuItem>
                    </injectIntl(MenuItem)>
                    <injectIntl(MenuItem)
                      data-menu-item="test4"
                      isSelected={false}
                      key="test4"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      text="Test Menu 4"
                    >
                      <MenuItem
                        data-menu-item="test4"
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": null,
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": Symbol(react.fragment),
                            "timeZone": undefined,
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                        isSelected={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        text="Test Menu 4"
                      >
                        <li
                          className="list-item"
                          role="none"
                        >
                          <div
                            className="menu-item orion-fusion-theme"
                            data-menu-item="test4"
                            onBlur={[Function]}
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            role="menuitem"
                            tabIndex="0"
                          >
                            <div
                              className="title"
                            >
                              Test Menu 4
                            </div>
                          </div>
                        </li>
                      </MenuItem>
                    </injectIntl(MenuItem)>
                  </ul>
                </nav>
              </div>
            </Scroll>
          </div>
        </div>
      </ContentContainer>
    </NavigationSideMenu>
  </injectIntl(NavigationSideMenu)>
</ThemeContextProvider>
`;

exports[`Layout should render a NavigationSideMenu with a toolbar 1`] = `
<NavigationSideMenu
  intl={
    Object {
      "$t": [Function],
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "fallbackOnEmptyString": true,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "onError": [Function],
      "onWarn": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": undefined,
      "wrapRichTextChunksInFragment": undefined,
    }
  }
  menuItems={Array []}
  onChange={[MockFunction]}
  routingStackBack={[MockFunction]}
  selectedMenuKey=""
  toolbar={
    <div>
      Toolbar
    </div>
  }
/>
`;

exports[`Layout should render a NavigationSideMenu with default props 1`] = `
<NavigationSideMenu
  intl={
    Object {
      "$t": [Function],
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "fallbackOnEmptyString": true,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "onError": [Function],
      "onWarn": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": undefined,
      "wrapRichTextChunksInFragment": undefined,
    }
  }
  menuItems={Array []}
  onChange={[Function]}
  routingStackBack={[Function]}
  selectedMenuKey=""
/>
`;

exports[`Layout should render a NavigationSideMenu with selectedKey 1`] = `
<NavigationSideMenu
  intl={
    Object {
      "$t": [Function],
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "fallbackOnEmptyString": true,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "onError": [Function],
      "onWarn": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": undefined,
      "wrapRichTextChunksInFragment": undefined,
    }
  }
  menuItems={
    Array [
      Object {
        "childKeys": Array [
          "test1",
          "test2",
          "test3",
          "test4",
        ],
        "key": "menu",
        "text": "Test Menu",
      },
      Object {
        "key": "test1",
        "text": "Test Menu 1",
      },
      Object {
        "key": "test2",
        "text": "Test Menu 2",
      },
      Object {
        "key": "test3",
        "text": "Test Menu 3",
      },
      Object {
        "key": "test4",
        "text": "Test Menu 4",
      },
    ]
  }
  onChange={[Function]}
  routingStackBack={[Function]}
  selectedMenuKey="menu"
/>
`;
